refactor and added swipe refresh functionality...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     // Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
     // Coil
-    implementation "io.coil-kt:coil:1.4.0"
+//    implementation "io.coil-kt:coil:1.4.0"
 
     // Paging 3
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
@@ -93,5 +93,8 @@ dependencies {
 
     // Splash screen api
     implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
+
+    // Swipe Refresh Layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
